--- a/index2.html
+++ b/index2.html
@@ -51,14 +51,14 @@
 <main>
     <section id="hello-section">
         <div class="px-4 py-5 my-5 text-center">
-            <img class="d-block mx-auto mb-4" src="../../../Downloads/bootstrap-5.2-2.2-examples/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+            <img class="d-block mx-auto mb-4"
+                 src="../../../Downloads/bootstrap-5.2-2.2-examples/assets/brand/bootstrap-logo.svg" alt="" width="72"
+                 height="57">
             <h1 class="display-5 fw-bold">Centered hero</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-                </div>
+                <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
+                    world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive
+                    grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
             </div>
         </div>
     </section>
@@ -69,6 +69,12 @@
                     <img src="../../../Downloads/bootstrap-5.2-2.2-examples/heroes/bootstrap-themes.png"
                          class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500"
                          loading="lazy">
+                    <div class="m-4 align-items-center align-self-center">
+                        <i class="fa-brands fa-linkedin fa-2xl"></i>
+                        <i class="fa-brands fa-github fa-2xl"></i>
+                        <i class="fa-solid fa-file fa-2xl"></i>
+                    </div>
+
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
@@ -76,23 +82,133 @@
                         world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
                         responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                        <div class="m-5">Hobby:
+                            <ul>
+                                <li>Add</li>
+                                <li>Add</li>
+                                <li>Add</li>
+                            </ul>
+                        </div>
+                        <div class="m-5">Education:
+                            <ul>
+                                <li>Add</li>
+                                <li>Add</li>
+                                <li>Add</li>
+                            </ul>
+                        </div>
+
                     </div>
                 </div>
 
             </div>
         </div>
     </section>
+    <section id="skills-section">
+        <div class="container px-4 py-5" id="icon-grid">
+            <h2 class="pb-2 border-bottom">Icon grid</h2>
+
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#bootstrap"/>
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#cpu-fill"/>
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#calendar3"/>
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#home"/>
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#speedometer2"/>
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#toggles2"/>
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#geo-fill"/>
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-start">
+                    <svg class="bi text-muted flex-shrink-0 me-3" width="1.75em" height="1.75em">
+                        <use xlink:href="#tools"/>
+                    </svg>
+                    <div>
+                        <h3 class="fw-bold mb-0 fs-4">Featured title</h3>
+                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="certification-section">
+        <div class="container py-4">
+            <div class="p-5 mb-4 bg-light rounded-3">
+                <div class="container-fluid py-1">
+                    <h4 class="display-5 fw-bold">Custom jumbotron</h4>
+                    <h5>UDEMY</h5>
+                    <button class="btn btn-primary btn-lg" type="button">Example button</button>
+                </div>
+            </div>
+    </section>
     <section id="contact-section">
         <div class="bg-dark text-secondary px-4 py-5 text-center">
             <div class="py-5">
-                <h1 class="display-5 fw-bold text-white">Dark mode hero</h1>
+                <h1 class="display-5 fw-bold text-white">Kontakt</h1>
                 <div class="col-lg-6 mx-auto">
-                    <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-                    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Custom button</button>
-                        <button type="button" class="btn btn-outline-light btn-lg px-4">Secondary</button>
+                    <p class="fs-5 mb-4">
+                    <div class="m-2">
+                        <i class="fa-brands fa-linkedin fa-5x"></i>
+                    </div>
+                    <div class="m-2">
+                        <i class="fa-brands fa-github fa-5x"></i>
+                    </div>
+                    <div class="m-2 align-items-center">
+                        <i class="fa-solid fa-envelope fa-5x"></i><a href="#" class="align-content-center">tomek.woytkowiak@gmail.com</a>
+                    </div>
+                    </p>
                     </div>
                 </div>
             </div>
