--- a/index2.html
+++ b/index2.html
@@ -192,6 +192,7 @@
                     <button class="btn btn-primary btn-lg" type="button">Example button</button>
                 </div>
             </div>
+        </div>
     </section>
     <section id="contact-section">
         <div class="bg-dark text-secondary px-4 py-5 text-center">
