still working on theme

--- a/index2.html
+++ b/index2.html
@@ -106,7 +106,7 @@
     </section>
     <section id="skills-section">
         <div class="container px-4 py-5" id="icon-grid">
-            <h2 class="pb-2 border-bottom">Icon grid</h2>
+            <h2 class="pb-2 border-bottom text-center">Icon grid</h2>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
                 <div class="col d-flex align-items-start">
@@ -185,10 +185,11 @@
         </div>
     </section>
     <section id="experience-section">
-
+        <h2 class="pb-2 border-bottom text-center">Experience</h2>
     </section>
-    <section id="certification-section" hidden>
+    <section id="certification-section">
         <div class="container py-4">
+            <h2 class="pb-2 border-bottom text-center">Certification</h2>
             <div class="p-5 mb-4 bg-light rounded-3">
                 <div class="container-fluid py-1">
                     <h4 class="display-5 fw-bold">Custom jumbotron</h4>
@@ -199,7 +200,7 @@
         </div>
     </section>
     <section id="project-section">
-
+        <h2 class="pb-2 border-bottom text-center">My projects</h2>
     </section>
     <section id="contact-section">
         <div class="bg-dark text-secondary px-4 py-5 text-center">
