--- a/index2.html
+++ b/index2.html
@@ -19,22 +19,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#about-me-section">O mnie</a>
+                    <a class="nav-link active" aria-current="page" href="#about-me-section">About me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Umiejętności</a>
+                    <a class="nav-link" href="#">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Doświadczenie</a>
+                    <a class="nav-link disabled" href="#">Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Certyfikaty</a>
+                    <a class="nav-link disabled" href="#">Certifications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projekty</a>
+                    <a class="nav-link" href="#">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact-section">Kontakt</a>
+                    <a class="nav-link" href="#contact-section">Contact</a>
                 </li>
             </ul>
         </div>
@@ -56,11 +56,9 @@
             <img class="d-block mx-auto mb-4"
                  src="../../../Downloads/bootstrap-5.2-2.2-examples/assets/brand/bootstrap-logo.svg" alt="" width="72"
                  height="57">
-            <h1 class="display-5 fw-bold">Centered hero</h1>
+            <h1 class="display-5 fw-bold">Hi, im Tomek</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
-                    world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive
-                    grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <p class="lead mb-4">PHP developer</p>
             </div>
         </div>
     </section>
