disabled sections: -experience -certification -project they are ready to load in future

--- a/index2.html
+++ b/index2.html
@@ -22,19 +22,19 @@
                     <a class="nav-link active" aria-current="page" href="#about-me-section">About me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Skills</a>
+                    <a class="nav-link" href="#skills-section">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Education</a>
+                    <a class="nav-link" href="#education-section">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Experience</a>
+                    <a class="nav-link disabled" href="#experience-section">Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Certifications</a>
+                    <a class="nav-link disabled" href="#certification-section">Certifications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link disabled" href="#project-section">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact-section">Contact</a>
@@ -203,7 +203,7 @@
             </div>
         </div>
     </section>
-    <section id="experience-section">
+    <section id="experience-section" hidden="hidden">
         <h2 class="pb-2 border-bottom text-center">Experience</h2>
         <div class="container">
             <div class="row">
@@ -225,7 +225,7 @@
             </div>
         </div>
     </section>
-    <section id="certification-section">
+    <section id="certification-section" hidden="hidden">
         <div class="container py-4">
             <h2 class="pb-2 border-bottom text-center">Certification</h2>
             <div class="p-5 mb-4 bg-light rounded-3">
@@ -237,7 +237,7 @@
             </div>
         </div>
     </section>
-    <section id="project-section">
+    <section id="project-section" hidden="hidden">
         <h2 class="pb-2 border-bottom text-center">My projects</h2>
         <div class="container">
             <ul class="row portfolio list-unstyled mb-0 boxed-portfolio">
