--- a/index2.html
+++ b/index2.html
@@ -81,9 +81,9 @@
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Welcome.</h1>
-                    <!--TODO zmienić ten opis !!! -->
-                    <p class="lead">My name is Tomasz Woytkowiak, im live in small town Kościan, 40km form Poznań. Im IT technician. Currently im studying IT at CDV in Poznań.
-                    On my own im learning PHP with Symfony framework.
+                    <p class="lead">My name is Tomasz Woytkowiak, im live in small town Kościan, 40km form Poznań. Im IT
+                        technician. Currently im studying IT at CDV in Poznań.
+                        On my own im learning PHP with Symfony framework.
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <div class="m-5">Hobby:
@@ -99,7 +99,119 @@
         </div>
     </section>
     <section id="skills-section">
-
+        <div class="container">
+            <h2 class="pb-2 border-bottom text-center">Skills</h2>
+            <div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="card">
+                                <img src="src/img/tech/php.svg" class="card-img-top" alt="...">
+                                <div class="card-body h-auto">
+                                    <h5 class="card-title">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-label="Example with label"
+                                                 style="width: 50%;" aria-valuenow="50" aria-valuemin="0"
+                                                 aria-valuemax="100">50%
+                                            </div>
+                                        </div>
+                                    </h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card ">
+                                <img src="src/img/tech/symfony.svg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-label="Example with label"
+                                                 style="width: 50%;" aria-valuenow="50" aria-valuemin="0"
+                                                 aria-valuemax="100">50%
+                                            </div>
+                                        </div>
+                                    </h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card">
+                                <img src="src/img/tech/git.svg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-label="Example with label"
+                                                 style="width: 10%;" aria-valuenow="10" aria-valuemin="0"
+                                                 aria-valuemax="100">10%
+                                            </div>
+                                        </div>
+                                    </h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="card">
+                                <img src="src/img/mysql-horizontal.svg" class="card-img-top" alt="...">
+                                <div class="card-body h-auto">
+                                    <h5 class="card-title">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-label="Example with label"
+                                                 style="width: 20%;" aria-valuenow="20" aria-valuemin="0"
+                                                 aria-valuemax="100">20%
+                                            </div>
+                                        </div>
+                                    </h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card">
+                                <img src="src/img/tech/javascript.svg" class="card-img-top" alt="...">
+                                <div class="card-body h-auto">
+                                    <h5 class="card-title">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-label="Example with label"
+                                                 style="width: 10%;" aria-valuenow="10" aria-valuemin="0"
+                                                 aria-valuemax="100">10%
+                                            </div>
+                                        </div>
+                                    </h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card">
+                                <img src="src/img/tech/html5.svg" class="card-img-top" alt="...">
+                                <div class="card-body h-auto">
+                                    <h5 class="card-title">
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-label="Example with label"
+                                                 style="width: 50%;" aria-valuenow="50" aria-valuemin="0"
+                                                 aria-valuemax="100">50%
+                                            </div>
+                                        </div>
+                                    </h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="education-section">
         <h2 class="pb-2 border-bottom text-center">Education</h2>
