Header now translated

--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 <head>
     <title>Tomasz "Scoobydowsky" Woytkowiak</title>
     <meta charset="utf-8">
@@ -19,25 +19,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#about-me-section">About me</a>
+                    <a class="nav-link active" aria-current="page" href="#about-me-section">O mnie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#skills-section">Skills</a>
+                    <a class="nav-link" href="#skills-section">Umiejętności</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#education-section">Education</a>
+                    <a class="nav-link" href="#education-section">Wykształcenie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#experience-section">Experience</a>
+                    <a class="nav-link disabled" href="#experience-section">Doświadczenie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#certification-section">Certifications</a>
+                    <a class="nav-link disabled" href="#certification-section">Certyfikaty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#project-section">Projects</a>
+                    <a class="nav-link disabled" href="#project-section">Projekty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact-section">Contact</a>
+                    <a class="nav-link" href="#contact-section">Kontakt</a>
                 </li>
             </ul>
         </div>
