removed all problems with template

--- a/index2.html
+++ b/index2.html
@@ -45,10 +45,10 @@
     <div class="mx-auto order-0">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#"><img src="src/img/poland_flag.png"></a>
+                <a class="nav-link" href="#"><img src="src/img/poland_flag.png" alt="pl"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"><img src="src/img/usa_flag.png"></a>
+                <a class="nav-link" href="#"><img src="src/img/usa_flag.png" alt="en"></a>
             </li>
         </ul>
     </div>
@@ -57,7 +57,7 @@
     <section id="hello-section">
         <div class="px-4 py-5 my-5 text-center">
             <img class="d-block mx-auto mb-4"
-                 src="../../../Downloads/bootstrap-5.2-2.2-examples/assets/brand/bootstrap-logo.svg" alt="" width="72"
+                 src="" alt="me or my logo" width="72"
                  height="57">
             <h1 class="display-5 fw-bold">Hi, im Tomek</h1>
             <div class="col-lg-6 mx-auto">
@@ -69,9 +69,9 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="../../../Downloads/bootstrap-5.2-2.2-examples/heroes/bootstrap-themes.png"
-                         class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500"
-                         loading="lazy">
+                    <img src=""
+                         class="d-block mx-lg-auto img-fluid" alt="me" width="700" height="500"
+                         loading="lazy" >
                     <div class="m-4 align-items-center align-self-center">
                         <i class="fa-brands fa-linkedin fa-2xl" onclick="openLinkedin()"></i>
                         <i class="fa-brands fa-github fa-2xl" onclick="openGithubProfile()"></i>
@@ -281,7 +281,7 @@
                     <div class="card mb-0">
                         <div class="project m-0">
                             <figure class="portfolio-item">
-                                <a href="single-project6.html" class="hovereffect">
+                                <a href="#" class="hovereffect">
                                     <img class="img-responsive" src="https://via.placeholder.com/350x180/FFB6C1/000000"
                                          alt="">
                                     <div class="overlay">
@@ -290,7 +290,7 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="single-project6.html" class="card-title title-link fs-16 fw-bold">FOIL LOGO</a>
+                            <a href="#" class="card-title title-link fs-16 fw-bold">FOIL LOGO</a>
                             <p class="card-text mt-5 mb-0 fs-14"><b>Skills:</b> Design, Branding</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
@@ -301,7 +301,7 @@
                     <div class="card mb-0">
                         <div class="project m-0">
                             <figure class="portfolio-item">
-                                <a href="single-project6.html" class="hovereffect">
+                                <a href="#" class="hovereffect">
                                     <img class="img-responsive" src="https://via.placeholder.com/350x180/87CEFA/000000"
                                          alt="">
                                     <div class="overlay">
@@ -310,7 +310,7 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="single-project6.html" class="card-title title-link fs-16 fw-bold">MOUNTAINS</a>
+                            <a href="#" class="card-title title-link fs-16 fw-bold">MOUNTAINS</a>
                             <p class="card-text mt-5 mb-0 fs-14"><b>Skills:</b> Design, Illustration</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
@@ -321,7 +321,7 @@
                     <div class="card mb-0">
                         <div class="project m-0">
                             <figure class="portfolio-item">
-                                <a href="single-project6.html" class="hovereffect">
+                                <a href="#" class="hovereffect">
                                     <img class="img-responsive" src="https://via.placeholder.com/350x180/B0C4DE/000000"
                                          alt="">
                                     <div class="overlay">
@@ -330,7 +330,7 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="single-project6.html" class="card-title title-link fs-16 fw-bold">CAMERON</a>
+                            <a href="#" class="card-title title-link fs-16 fw-bold">CAMERON</a>
                             <p class="card-text mt-5 mb-0 fs-14"><b>Skills:</b> Design</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
@@ -353,10 +353,8 @@
                     <div class="m-2 align-items-center">
                         <i class="fa-solid fa-envelope fa-3x" onclick="sendEmail()"></i>tomek.woytkowiak@gmail.com
                     </div>
-                    </p>
                 </div>
             </div>
-        </div>
         </div>
     </section>
 </main>
