about me section now translated

--- a/index2.html
+++ b/index2.html
@@ -80,17 +80,17 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Welcome.</h1>
-                    <p class="lead">My name is Tomasz Woytkowiak, im live in small town Kościan, 40km form Poznań. Im IT
-                        technician. Currently im studying IT at CDV in Poznań.
-                        On my own im learning PHP with Symfony framework.
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Cześć.</h1>
+                    <p class="lead">Witaj, nazywam się Tomasz Woytkowiak. Studiuję informatykę na Collegium Da vinci w Poznaniu.
+                        W swoich projektach wykorzystuje PHP , obecnie uczę się wykorzystania Frameworku Symfony 5.
+                        Hobbystycznie tworzę różne rzeczy przy wykorzystaniu Arduino.
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <div class="m-5">Hobby:
                             <ul>
-                                <li>Programming</li>
-                                <li>Computer Games</li>
-                                <li>Collecting Coins</li>
+                                <li>Programowanie</li>
+                                <li>Gry komputerowe</li>
+                                <li>Numizmatyka</li>
                             </ul>
                         </div>
                     </div>
