education section now translated

--- a/index2.html
+++ b/index2.html
@@ -222,12 +222,12 @@
                         <div class="card-body">
                             <div>
                                 <ul class="timeline">
-                                    <li class="event" data-date="2021-present">
-                                        <h1 class="fw-bold">IT Engineer</h1>
-                                        <h6>Collegium Da Vinci in Poznań</h6>
+                                    <li class="event" data-date="2021-obecnie">
+                                        <h1 class="fw-bold">Informatyk Inżynier</h1>
+                                        <h6>Collegium Da Vinci w Poznaniu</h6>
                                     </li>
-                                    <li class="event" data-date="2X1X - 2X1X">
-                                        <h1 class="fw-bold">IT Technician</h1>
+                                    <li class="event" data-date="2013 - 2017">
+                                        <h1 class="fw-bold">Technik Informatyk</h1>
                                         <h6>Zespół Szkół Technicznych w Lesznie</h6>
                                     </li>
                                 </ul>
