experience section now translated

--- a/index2.html
+++ b/index2.html
@@ -248,9 +248,9 @@
                             <div id="content">
                                 <ul class="timeline">
                                     <li class="event" data-date="N/A">
-                                        <h1 class="fw-bold">Developer</h1>
+                                        <h1 class="fw-bold">Programista PHP</h1>
                                         <h6>Company</h6>
-                                        <p>I don't have any experience yet.</p>
+                                        <p>Nie mam jeszcze żadnego doświadczenia</p>
                                     </li>
                                 </ul>
                             </div>
