experience section now translated

--- a/index2.html
+++ b/index2.html
@@ -249,7 +249,7 @@
                                 <ul class="timeline">
                                     <li class="event" data-date="N/A">
                                         <h1 class="fw-bold">Programista PHP</h1>
-                                        <h6>Company</h6>
+                                        <h6>Brak Firmy</h6>
                                         <p>Nie mam jeszcze żadnego doświadczenia</p>
                                     </li>
                                 </ul>
