footer section now auto update year

--- a/index2.html
+++ b/index2.html
@@ -272,7 +272,7 @@
             </div>
         </div>
     </section>
-    <section id="project-section" >
+    <section id="project-section" hidden="hidden">
         <h2 class="pb-2 border-bottom text-center">Projekty</h2>
         <div class="container">
             <ul class="row portfolio list-unstyled mb-0 boxed-portfolio">
@@ -360,7 +360,7 @@
 </main>
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-        <span class="text-muted" id="footer-content">Copyright ® 2022 by Scoobydowsky</span>
+        <span class="text-muted" id="footer-content">Copyright ® <script>document.write(new Date().getFullYear());</script> by Scoobydowsky</span>
     </div>
 </footer>
 <script src="src/js/bootstrap.bundle.min.js"></script>
