translation to pl is end

--- a/index2.html
+++ b/index2.html
@@ -273,7 +273,7 @@
         </div>
     </section>
     <section id="project-section" hidden="hidden">
-        <h2 class="pb-2 border-bottom text-center">Projekty</h2>
+        <h2 class="pb-2 border-bottom text-center" id="project-section-label">Projekty</h2>
         <div class="container">
             <ul class="row portfolio list-unstyled mb-0 boxed-portfolio">
                 <!-- project -->
@@ -290,8 +290,8 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold">Projekt</a>
-                            <p class="card-text mt-5 mb-0 fs-14"><b>Technologie wykorzystane:</b> PHP, Symfony</p>
+                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project1-name">Projekt</a>
+                            <p class="card-text mt-5 mb-0 fs-14"><b>Stack:</b> PHP, Symfony</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
                 </li><!-- / project -->
@@ -310,8 +310,8 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold">Projekt</a>
-                            <p class="card-text mt-5 mb-0 fs-14"><b>Technologie wykorzystane:</b>  PHP,OOP</p>
+                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-projec2-name">Projekt</a>
+                            <p class="card-text mt-5 mb-0 fs-14"><b>Stack:</b>  PHP,OOP</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
                 </li><!-- / project -->
@@ -330,8 +330,8 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold">Projekt</a>
-                            <p class="card-text mt-5 mb-0 fs-14"><b>Technologie wykorzystane:</b> PHP</p>
+                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project3-name">Projekt</a>
+                            <p class="card-text mt-5 mb-0 fs-14"><b>Stack:</b> PHP</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
                 </li><!-- / project -->
@@ -341,7 +341,7 @@
     <section id="contact-section">
         <div class="bg-dark text-secondary px-4 py-5 text-center">
             <div class="py-5">
-                <h1 class="display-5 fw-bold text-white">Kontakt</h1>
+                <h1 class="display-5 fw-bold text-white" id="contact-section-label">Kontakt</h1>
                 <div class="col-lg-6 mx-auto">
                     <p class="fs-5 mb-4">
                     <div class="m-2">
