translation to en is end

--- a/index2.html
+++ b/index2.html
@@ -238,7 +238,7 @@
             </div>
         </div>
     </section>
-    <section id="experience-section" hidden="hidden">
+    <section id="experience-section" >
         <h2 class="pb-2 border-bottom text-center" id="experience-section-label">Experience</h2>
         <div class="container">
             <div class="row">
@@ -260,19 +260,19 @@
             </div>
         </div>
     </section>
-    <section id="certification-section" hidden="hidden">
+    <section id="certification-section" >
         <div class="container py-4">
             <h2 class="pb-2 border-bottom text-center" id="certification-section-label">Certyfikaty</h2>
             <div class="p-5 mb-4 bg-light rounded-3">
                 <div class="container-fluid py-1">
                     <h4 class="display-5 fw-bold" id="certification-section-certificate1-name">Nazwa Certyfikatu</h4>
                     <h5 id="certification-section-certificate1-company">Firma Wystawiająca certyfikat</h5>
-                    <button class="btn btn-primary btn-lg" type="button" id="certification-section-cerificate1-check">Zobacz Certyfikat</button>
+                    <button class="btn btn-primary btn-lg" type="button"><div id="certification-section-certificate1-check">Zobacz Certyfikat</div></button>
                 </div>
             </div>
         </div>
     </section>
-    <section id="project-section" hidden="hidden">
+    <section id="project-section">
         <h2 class="pb-2 border-bottom text-center" id="project-section-label">Projekty</h2>
         <div class="container">
             <ul class="row portfolio list-unstyled mb-0 boxed-portfolio">
@@ -310,7 +310,7 @@
                             </figure><!-- / portfolio-item -->
                         </div><!-- / project -->
                         <div class="card-body">
-                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-projec2-name">Projekt</a>
+                            <a href="#" class="card-title title-link fs-16 fw-bold" id="project-section-project2-name">Projekt</a>
                             <p class="card-text mt-5 mb-0 fs-14"><b>Stack:</b>  PHP,OOP</p>
                         </div><!-- / card-body -->
                     </div><!-- / card -->
