translation full website to en all content are done

--- a/index2.html
+++ b/index2.html
@@ -19,19 +19,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" id="about-me-link" href="#about-me-section">O mnie</a>
+                    <a class="nav-link active" aria-current="page" id="about-me-link" href="#about-me-section">About me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="skills-link" href="#skills-section">Umiejętności</a>
+                    <a class="nav-link" id="skills-link" href="#skills-section">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="education-link" href="#education-section">Wykształcenie</a>
+                    <a class="nav-link" id="education-link" href="#education-section">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" id="experience-link" href="#experience-section">Doświadczenie</a>
+                    <a class="nav-link disabled" id="experience-link" href="#experience-section">Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" id="certification-link" href="#certification-section">Certyfikaty</a>
+                    <a class="nav-link disabled" id="certification-link" href="#certification-section">Certification</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" id="project-link" href="#project-section">Projects</a>
