created end website

--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" id="education-link" href="#education-section">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" id="experience-link" href="#experience-section">Experience</a>
+                    <a class="nav-link" id="experience-link" href="#experience-section">Experience</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" id="certification-link" href="#certification-section">Certification</a>
@@ -258,7 +258,7 @@
             </div>
         </div>
     </section>
-    <section id="certification-section" >
+    <section id="certification-section" hidden="hidden">
         <div class="container py-4">
             <h2 class="pb-2 border-bottom text-center" id="certification-section-label">Certification</h2>
             <div class="p-5 mb-4 bg-light rounded-3">
@@ -270,7 +270,7 @@
             </div>
         </div>
     </section>
-    <section id="project-section">
+    <section id="project-section" hidden="hidden">
         <h2 class="pb-2 border-bottom text-center" id="project-section-label">Projects</h2>
         <div class="container">
             <ul class="row portfolio list-unstyled mb-0 boxed-portfolio">
