switch links to github

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
         <span class="text-muted" id="footer-content">Copyright ® <script>document.write(new Date().getFullYear());</script> by Scoobydowsky</span>
     </div>
 </footer>
-<script src="src/js/bootstrap.bundle.min.js"></script>
+<script>setLangEN()</script>
+<script src="Scoobydowsky.github.io/src/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
