--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3" id="aboutMe-section-label">About me</h1>
-                    <p class="lead" id="aboutMe-section-description">Hi, my name Tomasz Woytkowiak. Im currently studing IT at Collegium Da Vinci in Poznań. In my project i use PHP , curently i learn usage Symfony 5 usage. As a hobby, I create different things using Arduino.";
+                    <p class="lead" id="aboutMe-section-description">Hi, my name is Tomasz Woytkowiak. Im currently studing IT at Collegium Da Vinci in Poznań. In my project i use PHP , curently i learn usage Symfony 5 usage. As a hobby, I create different things using Arduino.";
                     </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <div class="m-5" ><div id="aboutMe-section-hobby-label">Hobby:</div>
